--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.devel.ccqf.ccqfmisson">
+
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
@@ -8,8 +9,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:screenOrientation="portrait"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
@@ -25,7 +26,8 @@
         <activity android:name=".Program" />
         <activity android:name=".MonAgenda" />
         <activity android:name=".Feed" />
-        <activity android:name=".Survey"></activity>
+        <activity android:name=".Survey" />
+        <activity android:name=".SurveyCreate"></activity>
     </application>
 
 </manifest>
