--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.devel.ccqf.ccqfmisson">
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
@@ -33,7 +33,8 @@
         <activity android:name=".SurveyResults" />
         <activity android:name=".SurveyResultDetails" />
         <activity android:name=".NewB2B" />
-        <activity android:name=".ProgramDays"></activity>
+        <activity android:name=".ProgramDays" />
+        <activity android:name=".DocDetails"></activity>
     </application>
 
 </manifest>
